<resources>
    <string name="app_name">Taskmaster</string>
    <string name="submit_task">Submit Task</string>
    <string name="task_description">task description</string>
    <string name="add_tasks">Add Tasks</string>
    <string name="task_title">task title</string>
    <string name="save">SAVE</string>
    <string name="username">Username:</string>
    <string name="userName">Username</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="task_fragment">Task Fragment</string>
    <string name="add_task">Add Task</string>
    <string name="all_tasks">All Tasks</string>
    <string name="welcome_to_taskmaster">Welcome to Taskmaster</string>
    <string name="settings">Settings</string>
    <string name="todo">TODO</string>
    <string name="username_tv">Username</string>
    <string name="select_your_team">Select Your Team</string>
</resources>